style: fix tabs' height is too small

--- a/src/pages/home_page/home.module.scss
+++ b/src/pages/home_page/home.module.scss
@@ -49,8 +49,8 @@
   border-bottom: none;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
-  position: relative;
-  top: -200px;
+  position: absolute;
+  top: 250px;
   background-color: #fff;
   box-shadow: 0 0 3px #ccc;
   min-height: 60vh;
